1) Show the grid correctly in terms of rows x columns 2) Added vertical and horizontal scrolling to the grid container 3) Added functionality to change the grid’s rows and columns

--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,14 @@
-body {
-  font-size: 16px;
-}
-
 .App {
-  width: 80%;
   margin: auto;
+  width: 80%;
 }
 
 .cell {
-  height: 80px;
-  width: 80px;
+  height: 64px;
+  width: 64px;
   border: 2px solid red;
   margin: 4px;
+  display: inline-flex;
 }
 
 .cell-selected {
@@ -19,7 +16,26 @@ body {
   background-color: beige;
 }
 
-.grid-container {
+.row-container {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: row;
+  align-items: flex-start;
+} 
+
+.grid-container {
+  height: 500px;
+  text-align: center;
+  border: 1px solid black;
+  overflow: auto;
+  white-space: nowrap;
+  
+}
+
+.input-area-container {
+  margin-bottom: 16px;
+}
+
+.input-area {
+  display:  flex;
+  justify-content: center;
 }
